src/objects/SPE_KPIDefinition__c.object
<CustomObject>
    <customHelpPage>SPE_KPI_Definition_Help_Page</customHelpPage>
    <fields>
        <fullName>AbbreviatedName__c</fullName>
        <inlineHelpText>10 character limit.  Applicable for all languages.</inlineHelpText>
        <label>KPI Abbreviation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualCalculation__c</fullName>
        <label>Actual Calculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adhoc_Date__c</fullName>
        <label>Adhoc Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adhoc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adhoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AggregationScope__c</fullName>
        <label>Aggregation Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aggregation__c</fullName>
        <label>Aggregation</label>
        <picklist>
            <picklistValues>
                <fullName>AVG</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BUScope__c</fullName>
        <label>Product Scope</label>
        <picklist>
            <picklistValues>
                <fullName>All Products</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Buffer_Days__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Buffer Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>BL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>BU1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CalculationFormula__c</fullName>
        <label>Calculation Formula</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <picklist>
            <picklistValues>
                <fullName>Group1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryScope__c</fullName>
        <label>Category scope</label>
        <picklist>
            <picklistValues>
                <fullName>All Categories</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Category Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>All Categories</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Category1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <inlineHelpText>Relevant org/group for this data</inlineHelpText>
        <label>Organization/Group</label>
        <picklist>
            <picklistValues>
                <fullName>INDIRECT PROCUREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT PROCUREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICES PROCUREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARTNERING ORGANIZATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE BROADBAND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>255 Character Limit</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this checkbox is checked then this KPI wont be visible to supplier on scorecards.</description>
        <inlineHelpText>Not to be communicated to supplier.</inlineHelpText>
        <label>Internal Use Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CorrectiveActionInstructions__c</fullName>
        <description>Corrective Action Instructions for Supplier</description>
        <inlineHelpText>Corrective Action Instructions for Supplier</inlineHelpText>
        <label>Corrective Action Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DataAcquisitionMethod__c</fullName>
        <label>Data Acquisition Method</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>255 Character Limit</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Formula_Count__c</fullName>
        <label>Formula Count</label>
        <summaryForeignKey>KPI_Calculation_Formula__c.KPI__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FrequencyinMonth__c</fullName>
        <label>Frequency in Month</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FromDate__c</fullName>
        <description>Date field to enter from Date</description>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GeoScope__c</fullName>
        <label>Geography Scope</label>
        <picklist>
            <picklistValues>
                <fullName>All Markets</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group1__c</fullName>
        <inlineHelpText>See Guidelines</inlineHelpText>
        <label>Pillar</label>
        <picklist>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group2__c</fullName>
        <inlineHelpText>See Guidelines</inlineHelpText>
        <label>Group 2</label>
        <picklist>
            <picklistValues>
                <fullName>Hard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsHighBetter__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is High Better ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPICalulationUpdate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>KPICalulationUpdate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPICode__c</fullName>
        <description>Not in Use, Deprecated After Encryption</description>
        <displayFormat>KPI-{0000}</displayFormat>
        <label>KPI Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>KPITitleandKPIAbbreviation__c</fullName>
        <label>KPI Title and KPI Abbreviation</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KPIValuesCalculation__c</fullName>
        <label>KPIValuesCalculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPIVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI Version</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>KPI</relationshipLabel>
        <relationshipName>KPI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KPI_Description_Language_1__c</fullName>
        <label>KPI Description Language 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KPI_Description_Language_2__c</fullName>
        <label>KPI Description Language 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KPI_Description_Language_3__c</fullName>
        <label>KPI Description Language 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KPI_Title_Language_1__c</fullName>
        <encrypted>true</encrypted>
        <label>KPI Title Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Title_Language_2__c</fullName>
        <encrypted>true</encrypted>
        <label>KPI Title Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Title_Language_3__c</fullName>
        <encrypted>true</encrypted>
        <label>KPI Title Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Title__c</fullName>
        <description>This field will be replaced with Standard Name field of KPI 
(Standard Name field of KPI is now auto number.)</description>
        <encrypted>true</encrypted>
        <label>KPI Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <inlineHelpText>See Guidelines; sets the number of buckets or scores.</inlineHelpText>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LifecycleStage__c</fullName>
        <inlineHelpText>KPI can not be used until Published</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Master_KPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master KPI</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>KPI (Master KPI)</relationshipLabel>
        <relationshipName>KPI1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MissingDatalogic__c</fullName>
        <inlineHelpText>Please Click on the Help Link on the top of this page</inlineHelpText>
        <label>Missing Data logic</label>
        <picklist>
            <picklistValues>
                <fullName>Past Data or Category Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE Invalid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Scheduled_DateVersion__c</fullName>
        <formula>ScheduledDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_Of_Months__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number Of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Official__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Official</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OperationalType__c</fullName>
        <label>Operational Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lagging PI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leading PI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PIBusiness__c</fullName>
        <label>PI Business</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PI Data</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a PI which is Number type,Data Acquisition Method is Data Load and Stage should be Published</errorMessage>
            <filterItems>
                <field>SPE_PIDefinition__c.LifecycleStage__c</field>
                <operation>equals</operation>
                <value>Published, Pilot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SPE_PIDefinition__c</referenceTo>
        <relationshipLabel>KPI</relationshipLabel>
        <relationshipName>KPI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreventiveActionInstructions__c</fullName>
        <description>Preventive Action instructions for supplier</description>
        <inlineHelpText>Preventive Action instructions for supplier</inlineHelpText>
        <label>Preventive Action Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurposeAndObjective__c</fullName>
        <inlineHelpText>255 Character Limit</inlineHelpText>
        <label>Purpose And Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RCAInstructions__c</fullName>
        <description>RCA instructions for supplier</description>
        <inlineHelpText>RCA instructions for supplier</inlineHelpText>
        <label>RCA Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPNCondition1Expression__c</fullName>
        <label>RPNCondition1Expression</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPNCondition1__c</fullName>
        <label>RPN Condition1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPNCondition2Expression__c</fullName>
        <label>RPNCondition2Expression</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPNCondition2__c</fullName>
        <label>RPN Condition2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPNCondition__c</fullName>
        <label>RPN Condition</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>==</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>!=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Null Or Zero</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RPNElse__c</fullName>
        <label>RPNElse</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPNExpressionElse__c</fullName>
        <label>RPN Expression else</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPNExpression__c</fullName>
        <label>RPN Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SchedulePeriod__c</fullName>
        <label>Schedule Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScheduledDate__c</fullName>
        <description>Enter date when the KPI will be calculated (for data) or scheduled (for survey)</description>
        <inlineHelpText>This is an auto computed date looking at the underlying PI definitions (latest PI upload date + buffer days). This refreshes in batches and not instantaneously.</inlineHelpText>
        <label>Next Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubRegion__c</fullName>
        <label>SubRegion</label>
        <picklist>
            <picklistValues>
                <fullName>Eastern Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Asia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SurveyBased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Based?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ToDate__c</fullName>
        <description>Date field to enter To Date</description>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Operational, Commercial, or Strategic</inlineHelpText>
        <label>KPI Domain</label>
        <picklist>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UoM__c</fullName>
        <encrypted>true</encrypted>
        <inlineHelpText>i.e. Days, Units, %, Euros, etc.</inlineHelpText>
        <label>Unit of Measure</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>VerNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <formula>&apos;Version-&apos;+TEXT(VerNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version</label>
        <type>Text</type>
    </fields>
    <label>KPI</label>
    <nameField>
        <displayFormat>KPI-{000000}</displayFormat>
        <label>KPI Sequential ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI</pluralLabel>
    <recordTypes>
        <fullName>Draft_and_Pilot</fullName>
        <active>true</active>
        <label>Draft and Pilot</label>
    </recordTypes>
    <recordTypes>
        <fullName>Draft_and_Pilot_Version</fullName>
        <active>true</active>
        <label>Draft and Pilot Version</label>
    </recordTypes>
    <recordTypes>
        <fullName>Obsolete</fullName>
        <active>true</active>
        <description>Change the record type to Obsolete when lifecycle stage is obsolete</description>
        <label>Obsolete</label>
    </recordTypes>
    <recordTypes>
        <fullName>Published</fullName>
        <active>true</active>
        <label>Published</label>
    </recordTypes>
    <recordTypes>
        <fullName>Published_Version</fullName>
        <active>true</active>
        <label>Published Version</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Buffer_Days_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(PI_Data__c),OR(ISNULL(Buffer_Days__c),Buffer_Days__c &lt;=0))</errorConditionFormula>
        <errorDisplayField>ActualCalculation__c</errorDisplayField>
        <errorMessage>Buffer Days should be &gt;= 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE2_KPI_Equals_PI_Rule</fullName>
        <active>true</active>
        <description>This rule is triggered to check the KPI = PI functionality</description>
        <errorConditionFormula>AND(NOT(ISBLANK(PI_Data__c)),NOT(ISBLANK(Buffer_Days__c)))</errorConditionFormula>
        <errorMessage>Buffer Days should be blank for PI=KPI</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_KPI_Equals_PI_Rule</fullName>
        <active>true</active>
        <description>This rule is triggered to check the KPI = PI functionality</description>
        <errorConditionFormula>AND(!ISBLANK(PI_Data__c),!ISBLANK(Buffer_Days__c),OR(!ISBLANK(ScheduledDate__c),!ISBLANK(TEXT(FrequencyinMonth__c))),TEXT(GeoScope__c) != TEXT(PI_Data__r.GeoScope__c),TEXT(CategoryScope__c) != TEXT(PI_Data__r.CategoryScope__c),TEXT(BUScope__c) != TEXT(PI_Data__r.BUScope__c))</errorConditionFormula>
        <errorMessage>For KPI = PI, Scheduled Date,Buffer Days and Frequency Month should be blank AND Geo scope, Category Scope, Product Scope should match with that of the selected PI Definition</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_KPI_NotEquals_PI_Rule</fullName>
        <active>true</active>
        <description>This rule is triggered to force the user to provide a scheduled date and a frequency value provided the PI data is blank</description>
        <errorConditionFormula>AND(ISBLANK(PI_Data__c),ISBLANK( TEXT(FrequencyinMonth__c)))</errorConditionFormula>
        <errorMessage>Please provide the frequency in months</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_KPI_Published_Stage</fullName>
        <active>true</active>
        <description>KPI stage should be Published if PI Data not NULL or KPI Calculation Canvas filled.</description>
        <errorConditionFormula>If( Formula_Count__c = 0,true,false) &amp;&amp; ISBLANK(PI_Data__c)&amp;&amp;  ISPICKVAL( LifecycleStage__c , &quot;Published&quot;)</errorConditionFormula>
        <errorDisplayField>ActualCalculation__c</errorDisplayField>
        <errorMessage>Before Published you must have to complete KPI Calculation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_SPE_User_Profile_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Name== &quot;SPE User&quot; &amp;&amp;  ISCHANGED(KPI_Title__c)</errorConditionFormula>
        <errorMessage>You are not allowed to edit the record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_Schedule_date_validation</fullName>
        <active>false</active>
        <description>This validation restricts user from entering past date as scheduled date</description>
        <errorConditionFormula>AND (ISNEW(), ISBLANK(PI_Data__c), NOT(ISBLANK(ScheduledDate__c)),ScheduledDate__c &lt;=TODAY())</errorConditionFormula>
        <errorDisplayField>ScheduledDate__c</errorDisplayField>
        <errorMessage>Scheduled Date can only be a future date and cannot be left blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_special_character_not_allowed</fullName>
        <active>true</active>
        <description>Name should be start with Alphanumeric only</description>
        <errorConditionFormula>NOT(REGEX(KPI_Title__c, &quot;[a-zA-Z 0-9]{1}.*&quot;))</errorConditionFormula>
        <errorDisplayField>ActualCalculation__c</errorDisplayField>
        <errorMessage>Name should be start with Alphanumeric only</errorMessage>
    </validationRules>
</CustomObject>